--- a/css/Products.css
+++ b/css/Products.css
@@ -70,22 +70,32 @@ body{
   
 .carrusel .anterior {
     left: 0;
-    content: "";
+    color: white;
 }
   
 .carrusel .siguiente {
     right: 0;
+    color: white;
+
+}
+.carrusel img{
+    object-fit: cover;
 }
 .Product{
     background-color:#B99470;
     border-end-end-radius: 20px;
     border-end-start-radius: 20px;
 }
+h1{
+    margin: 12px;
+}
 h2{
     text-align: center;
     font-weight: 800;
+    margin: 12px;
 }
 p{
+    margin: 12px;
     font-weight: 600;
     font-size: large;
 }
