--- a/css/Products.css
+++ b/css/Products.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 body{
     padding: 0;
     margin: 0;
@@ -7,122 +8,97 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    flex-direction: column;
+    background-color: #e7e0da;
+
 }
-@media(min-width:550px) {
+@media(min-width: 600px){
     .Main{
-        max-width: 30%;
-        max-height: 400px;
-    }
-    .carrusel .siguiente{
-        display: none;
-    }
-    .carrusel .anterior{
-        display: none;
+        width: 20%;
+        min-height: 90vh;
+        border-radius: 15px;
+    background-color: #f7f5f3;
+
     }
 }
-@media(max-width:550px) {
-    .carrusel img.activa {
-        display: block;
-        transition: 500ms;
-    }
-    .carrusel{
-        overflow-x: scroll;
-    }
-    .carrusel img{
-        display: flex;
+@media(min-width: 1000px){
+    .Main{
+        width: 50%;
+        min-height: 60%;
+        border-radius: 15px;
+    background-color: #f7f5f3;
+
     }
 }
 .Main{
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    width: 100%;
-    height: 600px;
+    background-color: #f7f5f3;
+    height: 100vh;
+}
+.header{
+    height: 40px;
+    display: flex;
+    align-items: center;
+    padding-top: 12px;
+}
+.header button{
+    background-color: #f7f5f3;
+    border: 0;
+    transform: scale(0.5);
+}
+h1{
+    font-size: 20px;
+    margin-left: 12px;
 }
 .carrusel{
-    border-radius: 20px;
     width: 100%;
-    height: 300px;
+    height: 40%;
     display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
 }
 .carrusel img{
-  height: 300px;
-  width: 100%;
-  border-radius:   20px 20px  0  0 ;
-  display: none;
-  transition: 500ms;
-}
-.carrusel img.activa {
-  display: block;
-  transition: 500ms;
-}
-  
-.carrusel button {
-  position: absolute;
-  top: 36%;
-  transform: translateY(-50%);
-  width: 28px;
-  height: 48px;
-  background-color: black;
-  opacity: 0.7;
-}
-  
-.carrusel .anterior {
-    left: 0;
-    color: white;
-}
-  
-.carrusel .siguiente {
-    right: 0;
-    color: white;
-
-}
-.carrusel img{
+    width: 500px;
+    height: 100%;
     object-fit: cover;
 }
 .Product{
-    background-color:#B99470;
-    border-end-end-radius: 20px;
-    border-end-start-radius: 20px;
-}
-h1{
-    margin: 12px;
+    width: 100%;
 }
 h2{
-    text-align: center;
-    font-weight: 800;
-    margin: 12px;
+    text-align: left;
+    padding: 12px;
 }
 p{
-    margin: 12px;
-    font-weight: 600;
-    font-size: large;
-}
-button{
-    cursor: pointer;
+    text-align: left;
+    padding: 12px;
 }
 .Redes{
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+}
+.Redes div{
+    width: 50%;
+    justify-content: center;
+    margin-top: 20px;
+}
+.Redes button{
+    background-color: #b8946f;
+    border-radius: 20px;
+    border: none;
+    width: 100%;
+    height: 40px;
+    font-size: 16px;
 }
 .wats{
-    background-color: green;
-    margin: 12px;
-    height: 32px;
-    border-radius: 16px;
-    border: none;
-    background:linear-gradient(45deg, #1EBEA5, #00E676, #D0E9EA);
+    background-color: #b8946f;
 }
 .insta{
-    background: linear-gradient();
-    margin: 12px;
-    height: 32px;
-    border-radius: 16px;
-    border: none;
-    background: #f09433; 
-    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
-    background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+    background-color: #ede8e3;
+}
+.Redes h2{
+    text-align: center;
 }
