--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ body{
     height: 100vh;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-sizing: border-box;
-    overflow-x: hidden;
+    overflow-x: clip;
 }
 @media(max-width:550px) {
     .Products2{
