--- a/css/Products.css
+++ b/css/Products.css
@@ -36,6 +36,7 @@ body{
     flex-direction: column;
     background-color: #f7f5f3;
     height: 100vh;
+    width: 100%;
 }
 .header{
     height: 40px;
