--- a/css/Terminos.css
+++ b/css/Terminos.css
@@ -5,7 +5,7 @@ body{
     height: 100vh;
     width: 100%;
     box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Plus Jakarta Sans", sans-serif;
     padding-left: 16px;
     font-size: large;
 }
